# Games101

./: .gitignore  LICENSE  README.md
Assignment0/: CMakeLists.txt  main.cpp
Assignment1/代码框架/: main.cpp
Assignment2/代码框架/: main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/Code/: Texture.hpp  main.cpp  rasterizer.cpp
Assignment4/code/: main.cpp
Assignment5/Code/: Renderer.cpp  Triangle.hpp
Assignment6/code/: BVH.cpp  BVH.hpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
Assignment7/code/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  Scene.cpp  Triangle.hpp  main.cpp
